fix: input search overlap

--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -73,87 +73,94 @@ header.hero {
     // Variante botones
 
     // Variante buscador
-    .search-wrapper {
-      max-width: 650px;
-      border-radius: 0.5rem;
-      overflow: hidden;
-      width: 100%;
-      height: 100%;
+    .search-container {
       position: relative;
-      top: 0;
+      height: 58px;
+      z-index: 4;
 
-      &:focus-within {
-        background-color: #f3f6f9;
-        box-shadow: 0 0 0 0.25rem #218274;
-        outline: 0.25rem solid transparent;
-        min-height: max-content;
-
-        .search-results {
-          display: block;
-        }
-      }
-
-      // resultados
-      .search-results {
-        display: none;
-
-        a:focus {
-          box-shadow: none;
-          outline: none;
-        }
-
-        /* resultados */
-        .list-link-result {
-          padding: 0.5rem;
-          display: flex;
-          align-items: center;
-          text-decoration: none;
-          color: #000;
-          gap: 0.25rem;
-        }
-      }
-
-      /* contenedor del botón */
-      .search-btn-container {
+      .search-wrapper {
+        max-width: 650px;
+        border-radius: 0.5rem;
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
         position: absolute;
-        top: 4px;
-        right: 4px;
-        bottom: 4px;
+        top: 0;
+        left: 0;
 
-        .btn-search {
-          > svg {
-            display: none;
+        &:focus-within {
+          background-color: #f3f6f9;
+          box-shadow: 0 0 0 0.25rem #218274;
+          outline: 0.25rem solid transparent;
+          min-height: max-content;
+
+          .search-results {
+            display: block;
+          }
+        }
+
+        // resultados
+        .search-results {
+          display: none;
+
+          a:focus {
+            box-shadow: none;
+            outline: none;
           }
 
-          > p {
-            // display: inline;
-            margin: 0;
-            padding: 0;
+          /* resultados */
+          .list-link-result {
+            padding: 0.5rem;
+            display: flex;
+            align-items: center;
+            text-decoration: none;
+            color: #000;
+            gap: 0.25rem;
           }
+        }
 
-          @media (width <= 360px) {
-            & > svg {
-              display: block;
-            }
+        /* contenedor del botón */
+        .search-btn-container {
+          position: absolute;
+          top: 4px;
+          right: 4px;
+          bottom: 4px;
 
-            & > p {
+          .btn-search {
+            > svg {
               display: none;
             }
-            z-index: 100;
+
+            > p {
+              // display: inline;
+              margin: 0;
+              padding: 0;
+            }
+
+            @media (width <= 360px) {
+              & > svg {
+                display: block;
+              }
+
+              & > p {
+                display: none;
+              }
+              z-index: 100;
+            }
           }
         }
-      }
 
-      /* input dentro de search */
-      #search-home.form-control {
-        border-bottom: 2px solid #e6ebf0;
-        border-radius: 0.5rem 0.5rem 0 0;
-        padding: 1rem 12px;
-        padding-right: 128px;
-        box-shadow: none;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
+        /* input dentro de search */
+        #search-home.form-control {
+          border-bottom: 2px solid #e6ebf0;
+          border-radius: 0.5rem 0.5rem 0 0;
+          padding: 1rem 12px;
+          padding-right: 128px;
+          box-shadow: none;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
       }
     }
 
